--- a/week1/day1.ipynb
+++ b/week1/day1.ipynb
@@ -92,7 +92,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "%%bash\n",
+        "# Install Miniconda\n",
+        "!wget -c https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
+        "!chmod +x Miniconda3-latest-Linux-x86_64.sh\n",
+        "!bash ./Miniconda3-latest-Linux-x86_64.sh -b -f -p /usr/local\n",
+        "\n",
+        "# Update Conda\n",
+        "import sys\n",
+        "!conda install --channel defaults conda python=3.11 --yes\n",
+        "!conda update --channel defaults --all --yes\n",
+        "\n",
+        "# Append path to be able to run Conda through Colab's Python\n",
+        "sys.path.append('/usr/local/lib/python3.6/site-packages')\n",
+        "\n",
+        "# Now you can create the environment\n",
+        "!conda env create -f environment.yml\n",
+        "\n",
+        "!conda init\n",
+        "\n",
+        "# To activate the environment, use the following\n",
+        "!conda activate llms"
+      ],
+      "metadata": {
+        "id": "NRvP4cET0p3i"
+      },
+      "id": "NRvP4cET0p3i",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "4e2a9393-7767-488e-a8bf-27c12dca35bd",
       "metadata": {
         "id": "4e2a9393-7767-488e-a8bf-27c12dca35bd",
@@ -661,6 +693,16 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6bWKYgCR0lIR"
+      },
+      "id": "6bWKYgCR0lIR",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
